--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Estilização para o cabeçalho (header) */
 header {
-    background-color: #312b2b;
+    background-color: #cea4a4;
     padding: 10px;
     text-align: center;
     margin: 0%;
@@ -20,7 +20,7 @@ header {
     
     /* Estilização para o body (cor de fundo ) */
     body {
-    background-color: rgb(22, 37, 37);
+    background-color: rgb(240, 243, 243);
     }
     
     /* Estilização para o corpo principal (main) */
@@ -37,7 +37,7 @@ header {
     line-height: 1.6;
     flex: 1;
     font-size: 18px;
-    color: #e45454;
+    color: #0f0f0f;
     padding-right: 10px;
     }
     
@@ -49,7 +49,7 @@ header {
     
     /* Estilização para o rodapé (footer) */
     .rodape {
-    background-color: #333;
+    background-color: #bd2a2a;
     color: #e04a4a;
     text-align: center;
     padding: 10px;
