--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Estilização para o cabeçalho (header) */
 header {
-    background-color: #cea4a4;
+    background-color: #ffffff;
     padding: 10px;
     text-align: center;
     margin: 0%;
